kubernetes/clusters/home-k3s/apps/woodpecker/woodpecker/app/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: woodpecker
spec:
  hostnames:
    - "ci.${DOMAIN}"
  parentRefs:
    - name: external
      namespace: network
      sectionName: https
  rules:
    - backendRefs:
        - name: woodpecker-server
          port: 80
